--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,9 @@ enable_testing()
 
 add_executable(cmake-sqlite main.cpp)
 
+find_package(SQLite3 REQUIRED)
+target_link_libraries(cmake-sqlite PRIVATE SQLite3)
+
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
